@@ -18,6 +18,9 @@ Todo:
 2023.03.29
 - UndoSystem is distilled to a base class and added ImageUndoSystem and ColorUndoSystem.
   The latter is not saved in system state yet.
+- File format change in system state. This one breaks the compatibility with older
+  saves. (Added Version so it won't do it in the future.)
+- ColorUndoSystem is included in the system state save.
 
 2023.03.28
 - Moving mouse over the palette in the PaletteEditor show color hint.
